Commented control button for  worker

--- a/views/dashboard/workers.ejs
+++ b/views/dashboard/workers.ejs
@@ -88,29 +88,29 @@
               panelTitle.style.display = 'inline';
               panelHeading.appendChild( panelTitle );
 
-              var controlBtns = document.createElement( 'div' );
-              controlBtns.align = 'right';
+              //var controlBtns = document.createElement( 'div' );
+              //controlBtns.align = 'right';
 
-              var pauseBtn = document.createElement( 'label' );
-              pauseBtn.type = 'button';
-              pauseBtn.className = 'btn btn-primary';
-              pauseBtn.innerHTML = '<span class=\'glyphicon glyphicon-pause\'></span>';
+              //var pauseBtn = document.createElement( 'label' );
+              //pauseBtn.type = 'button';
+              //pauseBtn.className = 'btn btn-primary';
+              //pauseBtn.innerHTML = '<span class=\'glyphicon glyphicon-pause\'></span>';
 
-              var resumeBtn = document.createElement( 'label' );
-              resumeBtn.type = 'button';
-              resumeBtn.className = 'btn btn-primary';
-              resumeBtn.innerHTML = '<span class=\'glyphicon glyphicon-play\'></span>';
+              //var resumeBtn = document.createElement( 'label' );
+              //resumeBtn.type = 'button';
+              //resumeBtn.className = 'btn btn-primary';
+              //resumeBtn.innerHTML = '<span class=\'glyphicon glyphicon-play\'></span>';
 
-              var stopBtn = document.createElement( 'label' );
-              stopBtn.type = 'button';
-              stopBtn.className = 'btn btn-primary';
-              stopBtn.innerHTML = '<span class=\'glyphicon glyphicon-stop\'></span>';
+              //var stopBtn = document.createElement( 'label' );
+              //stopBtn.type = 'button';
+              //stopBtn.className = 'btn btn-primary';
+              //stopBtn.innerHTML = '<span class=\'glyphicon glyphicon-stop\'></span>';
 
-              controlBtns.appendChild( pauseBtn );
-              controlBtns.appendChild( resumeBtn );
-              controlBtns.appendChild( stopBtn );
+              //controlBtns.appendChild( pauseBtn );
+              //controlBtns.appendChild( resumeBtn );
+              //controlBtns.appendChild( stopBtn );
 
-              panelHeading.appendChild( controlBtns );
+              //panelHeading.appendChild( controlBtns );
 
               panel.appendChild( panelHeading );
 
